--- a/home.html
+++ b/home.html
@@ -7,16 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ATM-F Home</title>
 
+    <!-- Стили -->
     <link rel="stylesheet" type="text/css" href="./static/css/common.css">
     <link rel="stylesheet" type="text/css" href="./static/css/main.css">
     <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Bungee+Inline|Rubik+Mono+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
 
+    <!-- Шрифты -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Rubik+Mono+One" rel="stylesheet">
+
+    <!-- Скрипты вендоров -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
     <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
+
+    <!-- Скрипты страницы -->
     <script type="text/javascript" src="./static/js/home.js" async="true"></script>
 </head>
 
@@ -50,12 +54,10 @@
                 <div class="category button js-translate js-deposit">Вклады</div>
             </div>
             <div class="categories-row">
-
                 <div class="category button js-translate js-payments">Платежи</div>
                 <div class="category button js-translate js-my-card">Моя карта</div>
             </div>
             <div class="categories-row">
-
                 <div class="category button js-translate js-settings">Управление счетом</div>
                 <div class="category button button_dark js-translate js-other">Другое</div>
             </div>
