--- a/success.html
+++ b/success.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Стили -->
     <link href="./static/css/reset.css" rel="stylesheet" media="screen">
     <link href="./static/css/common.css" rel="stylesheet" media="screen">
     <link href="./static/css/language.css" rel="stylesheet" media="screen">
 
+    <!-- Шрифты -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Rubik+Mono+One" rel="stylesheet">
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-    <script type="text/javascript" src="../js/idle-timer.min.js"></script>
+    <!-- Скрипты вендоров -->
+    <!-- <script type="text/javascript" src="../js/idle-timer.min.js"></script> -->
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
     <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
-    <script type="text/javascript" src="./static/js/language.js" async="true"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+    <!-- Скрипты страницы -->
+    <script type="text/javascript" src="./static/js/appearing_headlines.js" async="true"></script>
     <script type="text/javascript" src="./static/js/redirect_to_index.js" async="true"></script>
 </head>
 
@@ -30,9 +33,9 @@
     <img class="watermark-image" src='./static/img/tick.svg'>
     <!-- <img class="watermark-image watermark-image_rotated" src='./static/img/plus.svg'> -->
     <div class="center-content">
-        <div class="languages-wrapper">
-            <h2 class="language_title js-language-title">Пожалуйста, заберите деньги</h2>
-            <h2 class="language_title js-language-title">Please, take the cash</h2>
+        <div class="content-wrapper">
+            <h2 class="appearing-headline js-appearing-headline">Пожалуйста, заберите деньги</h2>
+            <h2 class="appearing-headline js-appearing-headline">Please, take the cash</h2>
         </div>
     </div>
     </div>
