--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ATM FRAUD</title>
 
+    <!-- Стили -->
     <link rel="stylesheet" type="text/css" href="./static/css/common.css">
     <link rel="stylesheet" type="text/css" href="./static/css/index.css">
     <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+
+    <!-- Шрифты -->
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Bungee+Inline|Rubik+Mono+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
 
+    <!-- Скрипты вендоров  -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
+
+    <!-- Скрипты страницы -->
     <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
     <script type="text/javascript" src="./static/js/index.js" async="true"></script>
 
@@ -23,16 +28,6 @@
 
 <body class="main-background">
     <img class="watermark-image" src="./static/img/bank.svg">
-
-    <!--
-        <div class="corner-icon">
-            <img src="./static/img/sas_icon_simple.png">
-        </div>
-    -->
-
-    <div class="moving_image">
-
-    </div>
 
     <div class="headline js-headline">
         <p class="headline_word js-word">Реализуйте</p>
