--- a/pin.html
+++ b/pin.html
@@ -7,16 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ATM FRAUD</title>
 
+    <!-- Стили -->
     <link rel="stylesheet" type="text/css" href="./static/css/common.css">
     <link rel="stylesheet" type="text/css" href="./static/css/pin.css">
     <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Bungee+Inline|Rubik+Mono+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
 
+    <!-- Шрифты -->
+    <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Rubik+Mono+One" rel="stylesheet">
+
+    <!-- Скрипты вендоров -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.js"></script>
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
+
+    <!-- Скрипты страницы -->
     <script type="text/javascript" src="./static/js/pin.js" async="true"></script>
 </head>
 
@@ -25,7 +29,6 @@
     <a href="#" class="atm-name">ATM-F</a>
     <img class="watermark-image" src='./static/img/key.svg'>
 
-    <!-- <p id='pin' style="font-size:60px;text-align:center;margin-top:1%;font-family:'Sans';width: 100%;height:55px"></p> -->
     <div class="center-content">
         <form id="pin-form" class="js-pin-form">
             <div>
