--- a/language.html
+++ b/language.html
@@ -9,6 +9,8 @@
 
     <!-- Шрифты -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Rubik+Mono+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+
 
     <!-- Скрипты вендоров -->
     <!-- <script type="text/javascript" src="../js/idle-timer.min.js"></script> -->
@@ -23,7 +25,7 @@
 
 <body class="main-background">
     <!-- <a href="http://thebank.sas-mic.local/atm/main.html "></a> -->
-    <a href="#" class="atm-name">ATM-F</a>
+    <a href="http://thebank.sas-mic.local/atm/main.html" class="atm-name">ATM-F</a>
 
     <img class="watermark-image" src='./static/img/earth.svg'>
     <div class="center-content">
