--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
 
     <!-- Скрипты страницы -->
-    <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
     <script type="text/javascript" src="./static/js/index.js" async="true"></script>
 
 </head>
@@ -42,15 +41,27 @@
     </div>
 
     <div class="headline js-headline">
-        <p class="headline_word js-word">Пожалуй,</p>
-        <p class="headline_word js-word">мы лучший</p>
-        <p class="headline_word js-word">банк в мире*</p>
+        <p class="headline_word js-word">Вклад</p>
+        <p class="headline_word js-word">"Надежный"</p>
+        <p class="headline_word js-word">ставка до 11.05%</p>
     </div>
 
     <div class="headline js-headline">
-        <p class="headline_word js-word">У нас</p>
-        <p class="headline_word js-word">больше банкоматов</p>
-        <p class="headline_word js-word">чем у Тинькова</p>
+        <p class="headline_word js-word">Управляйте</p>
+        <p class="headline_word js-word">финансами вместе</p>
+        <p class="headline_word js-word">с SAS Банк Онлайн</p>
+    </div>
+
+    <div class="headline js-headline">
+        <p class="headline_word js-word">Откройте</p>
+        <p class="headline_word js-word">любой* вклад</p>
+        <p class="headline_word js-word">в криптовалюте</p>
+    </div>
+
+    <div class="headline js-headline">
+        <p class="headline_word js-word">Cashback</p>
+        <p class="headline_word js-word">до 15% на покупку</p>
+        <p class="headline_word js-word">ПО от компании SAS*</p>
     </div>
 
     <div class="headline js-headline">
