--- a/language.html
+++ b/language.html
@@ -15,12 +15,15 @@
     <!-- Скрипты вендоров -->
     <!-- <script type="text/javascript" src="../js/idle-timer.min.js"></script> -->
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
-    <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-idletimer/1.0.0/idle-timer.min.js"></script>
+
 
     <!-- Скрипты страницы -->
     <script type="text/javascript" src="./static/js/appearing_headlines.js" async="true"></script>
     <script type="text/javascript" src="./static/js/language.js" async="true"></script>
+    <script type="text/javascript" src="./static/js/idle_timer.js" async="true"></script>
 </head>
 
 <body class="main-background">
