--- a/get_cash.html
+++ b/get_cash.html
@@ -19,11 +19,12 @@
     <!-- Скрипты вендоров -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-idletimer/1.0.0/idle-timer.min.js"></script>
 
     <!-- Скрипты страницы -->
-    <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
     <script type="text/javascript" src="./static/js/insert_customer_data.js" async="true"></script>
     <script type="text/javascript" src="./static/js/get_cash.js" async="true"></script>
+    <script type="text/javascript" src="./static/js/idle_timer.js" async="true"></script>
 </head>
 
 <body class="main-background">
